[gd_scene load_steps=5 format=3 uid="uid://d1ga81q12atc"]

[ext_resource type="Script" uid="uid://dlcrd4eaa65s5" path="res://src/level/adaptation_obstacle.gd" id="1_mvvav"]
[ext_resource type="Resource" uid="uid://b5f07rjwmpcqu" path="res://resources/obstacles/fireball.tres" id="2_pw5ec"]
[ext_resource type="Shape2D" uid="uid://bm73nevxjsv6e" path="res://resources/hitboxes/128x128_hitbox.tres" id="3_uatf8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uatf8"]

[node name="AdaptationObstacle" type="Node2D"]
script = ExtResource("1_mvvav")
obstacle_data = ExtResource("2_pw5ec")
obstacle_hitbox = ExtResource("3_uatf8")

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = ExtResource("3_uatf8")

[node name="EffectStaticbody" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectStaticbody"]
shape = ExtResource("3_uatf8")

[node name="Main_Texture" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_uatf8")

[node name="Secondary_Texture" type="Sprite2D" parent="."]
position = Vector2(0, -64)

[connection signal="body_entered" from="EffectArea" to="." method="_on_effect_area_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_effect_area_body_exited"]
